2013-08-22 Alexander Malysh <amalysh at kannel.org>
    * test/test_http.c: added don't follow redirect option.

2013-08-22 Alexander Malysh <amalysh at kannel.org>
    * gwlib/cfg.def: added dlr-mask to sms-service group.

2013-08-19  Stipe Tolj  <stolj at kannel.org>
    * doc/userguide/userguide.xml: document 'dlr-[url|mask]' config directives
      for 'group = sms-service' context.
    * gw/smsbox.c: add corresponding DLR values in func send_message() if we
      have some default values from the config, but no adhoc value from the
      HTTP response.
    * gw/urltrans.[ch]: added dlr_mask into URLTranslation struct, and access
      functions, since the struct is module scoped.

2013-07-03  Stipe Tolj  <stolj at kannel.org>
    * gw/wap_push_ppg.c: fix assertion check conditions.
    
2013-06-21  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_headers.c: adding some debug() lines to trace WSP header packing
      better for WAP Push messages, i.e. SI or MMS indications.
    * wap/wsp_unit.c: added wsp_pdu_dump() to dump the WSP PDU before packing
      for push transport, source code re-formating. NLC.
      
2013-06-19  Stipe Tolj  <stolj at kannel.org>
    * wap/wsp_strings.def: add various new WSP byte codes.
    * wap/wsp.h: add WSP_TBD to wsp_encoding enumeration.
    
2013-05-07 Alexander Malysh <amalysh at kannel.org>
	* gw/smsbox.c: fixed issue with DLRs because we don't have URLTranslation for
	  it. This fixes #686.

2013-05-06 Alexander Malysh <amalysh at kannel.org>
    * gwlib/conn.c: changed conn_read_packet to accept startmark -1 and ignore
      it in this case.

2013-05-06 Alexander Malysh <amalysh at kannel.org>
    * gw/dlr_mysql.c: fixed memory leak.

2013-04-13  Stipe Tolj  <stolj at kannel.org>
    * doc/doxgen/kannel.conf: automated update via 'doxygen -u' to the
      configuration file.
      
2013-04-09 Alexander Malysh <amalysh at kannel.org>
    * gwlib/socket.[ch], test/fakewap.c: patch with