@@ -1,3 +1,6 @@
+2013-08-23 Alexander Malysh <amalysh at kannel.org>
+    * gwlib/http.c: fixed issue when Host already set in the headers but we set it again.
+
 2013-08-22 Alexander Malysh <amalysh at kannel.org>
     * test/test_http.c: added don't follow redirect option.
 
